--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
     "astro": "^4.0.8",
+    "astro-icon": "^1.1.5",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.2"
   }
 }
