--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/mdx": "^2.0.3",
-    "@astrojs/rss": "^4.0.1",
-    "@astrojs/sitemap": "^3.0.4",
-    "astro": "^4.0.8",
-    "astro-icon": "^1.1.5",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/rss": "^4.0.10",
+    "@astrojs/sitemap": "3.2.1",
+    "astro": "5.1.1",
+    "astro-icon": "1.1.5",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.2"
